# AgentOps_Gateway

./: .dockerignore  .gitignore  CLAUDE.md  README.md  TODOS.md  docker-compose.yml  pyproject.toml
.claude/hooks/: protect-files.sh
.github/workflows/: ci.yml
certs/: README.md
demo-agent/: pyproject.toml
demo-agent/src/demo_agent/: __init__.py  __main__.py  graph.py  mcp_client.py
docs/context/: 2026-06-10-context-save.md  2026-06-13-context-save.md  2026-06-14-context-save-code-comments.md  2026-06-14-context-save.md
docs/design/: agentops-gateway-design.md
docs/specs/: 00-epic.md  01-scaffold.md  02-backend-servers.md  03-gateway-core.md  04-auth-policy-audit.md  05-observability.md  06-langgraph-admin.md
gateway/: Dockerfile  pyproject.toml
gateway/src/gateway/: __init__.py  __main__.py  admin.py  aggregate.py  app.py  audit.py  auth.py  errors.py  observability.py  policy.py  routes.py  upstream.py
gateway/src/gateway/templates/: admin.html
observability/: prometheus.yml
observability/grafana/dashboards/: gateway.json
observability/grafana/provisioning/dashboards/: dashboards.yml
observability/grafana/provisioning/datasources/: prometheus.yml
policies/: policy.yaml
scripts/: check_gateway.py  check_servers.py  e2e_demo.py  issue_tokens.py  spike_concurrency.py
servers/docs/: Dockerfile  pyproject.toml
servers/docs/corpus/: api-conventions.md  code-review-checklist.md  database-backup.md  deployment-process.md  incident-runbook.md  monitoring-alerts.md  onboarding-guide.md  oncall-rotation.md  security-policy.md  vacation-policy.md
servers/docs/src/docs_server/: __init__.py  __main__.py  search.py  server.py
servers/ops/: Dockerfile  pyproject.toml
servers/ops/src/ops_server/: __init__.py  __main__.py  fake_data.py  server.py
servers/ticket/: Dockerfile  pyproject.toml
servers/ticket/src/ticket_server/: __init__.py  __main__.py  db.py  server.py
tests/: conftest.py
tests/integration/: conftest.py  helpers.py  test_admin.py  test_auth_audit.py  test_backend_servers.py  test_gateway_core.py  test_metrics_tracing.py  test_policy_matrix.py  test_smoke.py
tests/unit/: test_admin_reader.py  test_audit.py  test_auth.py  test_demo_agent.py  test_docs_server.py  test_gateway_routing.py  test_observability.py  test_ops_server.py  test_policy.py  test_ticket_server.py
