[project]
name = "agentops-gateway-workspace"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "agentops-gateway",
    "ticket-server",
    "docs-server",
    "ops-server",
]

[tool.uv.workspace]
members = ["gateway", "servers/*", "demo-agent"]

# demo-agent는 dev 그룹에만 — 테스트가 graph를 import하되 gateway 프로덕션
# 이미지(uv sync --no-dev --package agentops-gateway)에는 langgraph가 섞이지 않는다.
[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "demo-agent",
]

[tool.uv.sources]
agentops-gateway = { workspace = true }
ticket-server = { workspace = true }
docs-server = { workspace = true }
ops-server = { workspace = true }
demo-agent = { workspace = true }

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
