[project]
name = "agentops-gateway"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "mcp>=1.0",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "httpx>=0.27",
    "pyjwt>=2.9",
    "pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gateway"]
